Dark Mode fixes

--- a/src/assets/scss/_darkModeVariables.scss
+++ b/src/assets/scss/_darkModeVariables.scss
@@ -14,6 +14,8 @@ $c-primary: #00509E;
 $c-mediumbg: #373847;
 $c-lightbg: #4a4b5f;
 $c-headerbg: #373847;
+$c-footerbg: #373847;
+$c-navFooterTxt: #fff;
 $c-headerTxt: #fff;
 $c-hover: #fff;
 $c-secondary: #373847; //NB!! Bytte til #DDE7EE etter NTNU sin designmanual? Eventuelt #79A2CE
